# Upwork_Automation

./: .gitignore  .graphify_detect.json  .graphify_python  graphify_summary.json
backend/: .env.example  .env.production.example  .gitignore  README.md  UPWORK_Backend_File_Guide.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/app/: __init__.py  main.py
backend/docs/: AI_LAYER_EXECUTION_BLUEPRINT_2026.md  AI_LAYER_REMAINING_IMPLEMENTATION_2026.md  AI_RELEASE_GATE_2026-04-03.md  BACKEND_FULL_PIPELINE_2026.mmd  BACKEND_FULL_PIPELINE_MERMAID_2026.md  BACKEND_REMAINING_SCOPE_2026.md  BACKUP_ROLLBACK_RUNBOOK.md  DEPLOYMENT_RUNBOOK.md  GOOGLE_CONNECT_UI_BACKLOG.md  INCIDENT_RUNBOOK.md  PRODUCTION_SECRET_CHECKLIST.md  UAT_SIGNOFF_2026-04-03.md  apify_probe_output.md
backend/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
backend/scripts/: check_migrations.py  probe_firecrawl_job.py  refresh_n8n_source_pack.py  run_n8n_agent_sample.py  run_uat.py  tmp_check_claude_api.py  tmp_probe_apify_actor.py  tmp_run_n8n_compact_once.py
backend/tests/: conftest.py  test_ai_anthropic_provider.py  test_ai_foundation.py  test_ai_hardening.py  test_ai_job_classifier_service.py  test_ai_job_explanation_service.py  test_ai_job_understanding_service.py  test_ai_n8n_agent.py  test_ai_n8n_examples_regression.py  test_ai_n8n_source_pack.py  test_ai_openai_provider.py  test_ai_planner_service.py  test_ai_prompt_builder.py  test_ai_run_tracking_service.py  test_ai_validators.py  test_ai_workflow_intent_service.py  test_auth.py  test_connectors.py  test_health.py  (+20 more)
(+219 files in other folders)
